# ShopMandate

./: README.md  product.md
android/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/shopmandate/: MainActivity.kt  ShopViewModel.kt
android/app/src/main/java/com/shopmandate/capture/: AudioCapture.kt  LiveSession.kt  OAuthLoopback.kt  Permissions.kt
android/app/src/main/java/com/shopmandate/live/: LiveClient.kt
android/app/src/main/java/com/shopmandate/net/: ApiClient.kt  ApiService.kt  DevConfig.kt  Dtos.kt  UpiConfig.kt
android/app/src/main/res/drawable/: ic_launcher.xml
android/app/src/main/res/values/: strings.xml  themes.xml
backend/: .gitignore  README.md  main.py  pyproject.toml
backend/app/: adk_agents.py  connect.py  gemini.py  live.py  main.py  models.py  negotiation.py  orchestrator.py  p3p.py  payment.py  stores.py
backend/app/merchants/: base.py  mcp_client.py  ordering.py  registry.py
design/: stitch-prompt.md
design/approve_pay/: code.html
design/camera_search/: code.html
design/clarification/: code.html
design/comparing_stores/: code.html
design/connect_store_phone/: code.html
design/home_voice_first/: code.html
design/order_success/: code.html
design/otp_verification/: code.html
design/shopmandate/: DESIGN.md
design/upi_payment/: code.html
design/voice_listening/: code.html
gemini-live-test/: README.md  live.mjs  package-lock.json  package.json
(+19 files in other folders)
